tests/NormalTests/paczka1/fuzzy1/86584794.err
Error in line 4: InNC3a A638 31,8
Error in line 22: A638 S899 48,8
Error in line 27: YYJNomeAI S669 71,8
